# rustyConsoleGameEngine

./: Cargo.toml  README.md
examples/: doom.rs  main.rs  matrix.rs  pole-position.rs
src/: lib.rs
