[package]
name = "olc_console_engine_oop"
version = "0.1.0"
authors = ["Mark Anthony <markanthonymartinez9@gmail.com>"]
edition = "2018"

[dependencies]
widestring = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processenv", "wincon", "winbase", "winuser"] }
