[package]
name = "olc_console_engine_oop"
version = "0.1.0"
authors = ["Mark Anthony <markanthonymartinez9@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
widestring = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processenv", "wincon", "winbase", "winuser"] }
