[package]
name = "rustyConsoleGameEngine"
version = "0.1.0"
authors = ["Mark Anthony <markanthonymartinez9@gmail.com>"]
edition = "2018"
description = "A rusty port of the olcConsoleGameEngine."
license = "GPL-3.0-or-later"

[dependencies]
rand = "0.7.2"
widestring = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processenv", "wincon", "winbase", "winuser"] }
